--- a/help/src/hid00001.htm
+++ b/help/src/hid00001.htm
@@ -32,7 +32,7 @@
 
   <ul>
     <li>
-      不完全な疑似ダークモードをやめ、VCLスタイルを利用するようにしました。オプション設定 - フォント・配色 - 「スタイル」で、ライト/ダーク系合わせて14種類のスタイルを選択できます。なお、「ダイアログ」フォントはデフォルトで固定として、スタイルに関連する一部の配色項目を削除しました。<br>
+      不完全な疑似ダークモードをやめ、VCLスタイルを利用するようにしました。オプション設定 - フォント・配色 - 「スタイル」で、ライト/ダーク系合わせて14種類のスタイルを選択できます。なお、「ダイアログ」フォントはデフォルトで固定として、スタイルに関連する一部の配色項目を削除/変更しました。<br>
     </li>
 
     <li>
