--- a/help/src/hid00001.htm
+++ b/help/src/hid00001.htm
@@ -36,7 +36,7 @@
     </li>
 
     <li>
-      VCLスタイルを適用していると従来のヘルプ表示が乱れるため、hh.exe を別プロセスとして起動するようにしました。ヘルプが開いている状態で何らかのダイアログをモーダル表示しても、ヘルプは閉じません。これにともない、オプション設定 - 一般 - 操作 - 「ESCキーでヘルプを閉じる」は廃止、<span class="btn_frame">F1</span>キーによる元画面とヘルプ画面間の移動もできなくなりました。
+      VCLスタイルを適用していると従来のヘルプ表示が乱れるため、hh.exe を別プロセスで実行するようにしました。ヘルプが開いている状態で何らかのダイアログをモーダル表示しても、ヘルプは閉じません。これにともない、オプション設定 - 一般 - 操作 - 「ESCキーでヘルプを閉じる」は廃止、<span class="btn_frame">F1</span>キーによる元画面とヘルプ画面間の移動もできなくなりました。
     </li>
 
     <li>
