--- a/help/src/hid00002.htm
+++ b/help/src/hid00002.htm
@@ -92,7 +92,7 @@
 
     <dt class="no_bg">hhh.exe</dt>
     <dd>
-      テキストビュアーの <a href="hid00006.htm#HelpCurWord">HelpCurWord</a> コマンドでカーソル位置の単語を指定したヘルプで検索するには、<b>hhh.exe</b> (saitou155 氏作)が必要です。あらかじめ、パスの通ったディレクトリ(hh.exe がある C:\Windows など)にインストールしておいてください。
+      テキストビュアーの <a href="hid00006.htm#HelpCurWord">HelpCurWord</a> コマンドで、カーソル位置の単語を指定したヘルプで検索するには、<b>hhh.exe</b> (saitou155 氏作)が必要です。あらかじめ、パスの通ったディレクトリ(hh.exe がある C:\Windows など)にインストールしておいてください。
     </dd>
     
     <dt class="no_bg"><b>git.exe (Git for Windows)</b></dt>
