--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,14 +42,15 @@
   </div>
 
   <dl>
-    <dt>V16.00 <span class="ver_date">(2023-11-  )</span></dt>
+    <dt>V16.00 <span class="ver_date">(2023-11-22)</span></dt>
     <dd>
       ・64ビット版 NyanFi V15.63 をベースにVCLスタイル版を作成しました。なお、32ビット版を作成する予定はありません。<br>
       ・従来の不完全な疑似ダークモードをやめ、VCLスタイルを利用しています。オプション設定 - フォント・配色 - 「スタイル」で、ライト/ダーク系合わせて14種類のスタイルを選択できます。なお、「ダイアログ」フォントはデフォルトで固定として、またスタイルに関連する一部の配色項目を削除/変更しました。<br>
       ・オプション設定 - フォント・配色の「不正な入力項目の背景色」を廃止し、代わりに「エラー/注意の文字色」の枠で入力欄を囲むようにしました。<br>
       ・オプション設定 - デザイン -「情報パネルをフラットに」を廃止。フラット表示固定にしました。<br>
       ・Ricty Diminished フォントはサポート終了となっているようなので対応を止めました。<br>
-      ・VCLスタイルを適用すると従来のヘルプ表示が乱れるため、hh.exe を別プロセスとして起動するようにしました。ヘルプが開いている状態で何らかのダイアログをモーダル表示しても、ヘルプは閉じません。これにともない、オプション設定 - 一般 - 操作 - 「ESCキーでヘルプを閉じる」は廃止、F1 キーによる元画面とヘルプ画面間の移動もできなくなりました。<br>
+      ・VCLスタイルを適用すると従来のヘルプ表示が乱れるため、hh.exe を別プロセスで実行するようにしました。ヘルプが開いている状態で何らかのダイアログをモーダル表示しても、ヘルプは閉じません。これにともない、オプション設定 - 一般 - 操作 - 「ESCキーでヘルプを閉じる」は廃止、F1 キーによる元画面とヘルプ画面間の移動もできなくなりました。<br>
+      ・テキストビュアーの HelpCurWord コマンドは hhh.exe (saitou155 氏作)を利用するようにしました。実行するには、あらかじめパスの通ったディレクトリにインストールしておいてください。<br>
       ・オプション設定 - デザイン - ステータスバーの書式 の「時計パネル」で使える書式文字列に $WS、$FP を追加。メモリ使用量(Working Set/ Pagefile)をKB単位で表示します。<br>
     </dd>
   </dl>
