--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,6 +42,17 @@
   </div>
 
   <dl>
+    <dt>V16.01 <span class="ver_date">(2023-11-24)</span></dt>
+    <dd>
+      ・選択できるスタイルを20種類に増やしました。<br>
+      ・スタイル変更時の確認メッセージで再起動する場合、現在のINIファイルを指定して再起動するようにしました。<br>
+      ・オプション設定 - フォント・配色 で、スタイルの影響を受ける一般的な部分の色設定を無効化できるようにしました。これにより、スタイル変更時の修正が楽になります。<br>
+      ・オプション設定 - フォント・配色 で「ステータスバー」にサイズの大きなフォントを割り当てたとき、バーの高さが適切に調整されなかったのを修正。<br>
+      ・縦横両方のシンプルスクロールバーが表示されている場合、一方のノブをつかむともう一方のノブ色も変化していたのを修正。<br>
+      ・オプション設定 - デザイン でスクロールバーを「標準」にしている場合、イメージビュアーのファイル情報とサムネイルのスクロールバーにスタイルが適用されなかったのを修正。<br>
+      ・イメージビュアーでシークバーを表示していて、コマンドではなく左右端のボタンで先頭/最後に移動したとき、シークバーの位置が正しく追従しなかったのを修正。<br>
+    </dd>
+
     <dt>V16.00 <span class="ver_date">(2023-11-22)</span></dt>
     <dd>
       ・64ビット版 NyanFi V15.63 をベースにVCLスタイル版を作成しました。なお、32ビット版を作成する予定はありません。<br>
