--- a/help/src/hid00002.htm
+++ b/help/src/hid00002.htm
@@ -6,24 +6,25 @@
   <title>インストール</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="7z.dll">
-    <param name="Keyword" value="7-zip64.dll">
-    <param name="Keyword" value="dynarecycler.spi">
-    <param name="Keyword" value="Git for Windows">
-    <param name="Keyword" value="git.exe">
-    <param name="Keyword" value="Migemo">
-    <param name="Keyword" value="tar64.dll">
-    <param name="Keyword" value="unrar.dll">
-    <param name="Keyword" value="unrar64j.dll">
-    <param name="Keyword" value="xd2txlib.dll">
-    <param name="Keyword" value="アーカイブから更新">
-    <param name="Keyword" value="アンインストール">
-    <param name="Keyword" value="インストール">
-    <param name="Keyword" value="コマンドファイル">
-    <param name="Keyword" value="ソースコード">
-    <param name="Keyword" value="バージョンアップ">
-    <param name="Keyword" value="更新の確認">
-    <param name="Keyword" value="動作環境">
+	<param name="Keyword" value="7z.dll">
+	<param name="Keyword" value="7-zip64.dll">
+	<param name="Keyword" value="dynarecycler.spi">
+	<param name="Keyword" value="Git for Windows">
+	<param name="Keyword" value="git.exe">
+	<param name="Keyword" value="hhh.exe">
+	<param name="Keyword" value="Migemo">
+	<param name="Keyword" value="tar64.dll">
+	<param name="Keyword" value="unrar.dll">
+	<param name="Keyword" value="unrar64j.dll">
+	<param name="Keyword" value="xd2txlib.dll">
+	<param name="Keyword" value="アーカイブから更新">
+	<param name="Keyword" value="アンインストール">
+	<param name="Keyword" value="インストール">
+	<param name="Keyword" value="コマンドファイル">
+	<param name="Keyword" value="ソースコード">
+	<param name="Keyword" value="バージョンアップ">
+	<param name="Keyword" value="更新の確認">
+	<param name="Keyword" value="動作環境">
   </object>
 </head>
 
@@ -108,7 +109,7 @@
   <p>
     最初に起動したときに、実行ディレクトリにINIファイル(<b>NyanFi.INI</b>)が作成されます。設定情報はこのINIファイルに保存されます。<br>
     すべての設定をデフォルトに戻したい場合は、<b>NyanFi</b> が起動していない状態で、<b>NyanFi.INI</b> を削除してください。<br>
-    なお、従来版の <b>NyanFI.INI</b> を流用してもかまいません。
+    従来版の <b>NyanFI.INI</b> を流用してもかまいません。
   </p>
   <p class="note_text">
     FTP接続のパスワードは暗号化して保存されます。ユーザ名とシステムドライブのシリアルナンバーを元に暗号化しているため、別環境に移動した場合は再設定が必要となります。
