--- a/help/src/hid00023.htm
+++ b/help/src/hid00023.htm
@@ -6,17 +6,19 @@
   <title>オプション設定 - フォント・配色</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="OpenStandard">
-    <param name="Keyword" value="Swatchbook.INI">
-    <param name="Keyword" value="インポート">
-    <param name="Keyword" value="エクスポート">
-    <param name="Keyword" value="スポイト">
-    <param name="Keyword" value="タイムスタンプの配色">
-    <param name="Keyword" value="フォント">
-    <param name="Keyword" value="フォント・配色">
-    <param name="Keyword" value="拡張子別配色">
-    <param name="Keyword" value="色見本">
-    <param name="Keyword" value="配色">
+	<param name="Keyword" value="OpenStandard">
+	<param name="Keyword" value="Swatchbook.INI">
+	<param name="Keyword" value="インポート">
+	<param name="Keyword" value="エクスポート">
+	<param name="Keyword" value="スタイル">
+	<param name="Keyword" value="スポイト">
+	<param name="Keyword" value="ダークモード">
+	<param name="Keyword" value="タイムスタンプの配色">
+	<param name="Keyword" value="フォント">
+	<param name="Keyword" value="フォント・配色">
+	<param name="Keyword" value="拡張子別配色">
+	<param name="Keyword" value="色見本">
+	<param name="Keyword" value="配色">
   </object>
 </head>
 
@@ -25,16 +27,15 @@
   <h1>オプション設定 - フォント・配色</h1>
 
   <p class="link_box">
-    <a href="#Font">フォント</a> ／ <a href="#Style">スタイル</a> ／ <a href="#Color">配色</a> ／ <a href="#TimeSize">タイムスタンプ/サイズの配色</a> ／ <a
-      href="#ExtColor">拡張子別配色</a> ／ <a href="#Tag">タグ別配色</a>
+    <a href="#Font">フォント</a> ／ <a href="#Style">スタイル</a> ／ <a href="#Color">配色</a> ／ <a
+      href="#TimeSize">タイムスタンプ/サイズの配色</a> ／ <a href="#ExtColor">拡張子別配色</a> ／ <a href="#Tag">タグ別配色</a>
   </p>
   <br>
 
-  <>
+  <dl>
     <dt id="Font"><img src="grpbox.png" alt=""> フォント</dt>
     <dd>コンボボックスで設定対象を選び、<span class="btn_frame">...</span>ボタンでフォントを参照してください。<br>
-      「<b>テキストビュアー</b>」以外では、プロポーショナルフォントも設定できます。<br>
-      サイズは整数で指定してください(10.5 などは不可)。なお「<b>ダイアログ</b>」については最大サイズが10ポイントです(UIフォントを推奨)。フォントやサイズによっては表示が欠けるかもしれません。<br>
+      「<b>テキストビュアー</b>」以外では、プロポーショナルフォントも設定できます。サイズは整数で指定してください(10.5 などは不可)。<br>
       <div class="spc_box">
         ファンクションキーバーのボタン幅は表示文字列によって決まります。幅をそろえるために、文字数が少ない場合は空白を追加して調整していますが、「<b>ツールボタン</b>」にプロポーショナルフォントを用いているとバラつく可能性があります。ボタン幅をそろえたい場合は、等幅フォントを使用してください。<br>
       </div>
@@ -43,9 +44,15 @@
 
     <dt id="Style"><img src="grpbox.png" alt=""> スタイル</dt>
     <dd>
-      アプリケーションの表示スタイルを変更できます。これにより、独自のダークモードが可能になります。<br>
+      アプリケーションの表示スタイルを変更できます。これにより、独自のライト/ダークモードが可能になります。<br>
       今のところ、以下のスタイルを選択できます。<br>
       <div class="spc_box">
+        Aqua Light Slate<br>
+        Glow<br>
+        Iceberg Classico<br>
+        Lavender Classico<br>
+        Sky<br>
+        Slate Classico<br>
         Tablet Dark<br>
         Tablet Light<br>
         Windows　　<span class="def_text">(従来の表示スタイル)</span><br>
@@ -69,7 +76,8 @@
       </div>
 
       <div class="info_text">
-        Windows 以外のスタイルを選択した場合、<a href="hid00009.htm#Show">オプション設定 - 一般 - 表示</a> の 「<b>角丸ウィンドウの無効化</b>」が機能しません。Windows11 ～ では角丸、それ以外では四角ウィンドウになります。<br>
+        Windows 以外のスタイルを選択した場合、<a href="hid00009.htm#Show">オプション設定 - 一般 - 表示</a> の 「<b>角丸ウィンドウの無効化</b>」が機能しません。Windows11
+        ～ では角丸、それ以外では四角ウィンドウになります。<br>
       </div>
       <br>
     </dd>
@@ -83,6 +91,7 @@
         href="hid00102.htm#Swatchbook">→ NyanFi が用いるファイル</a>)。<br>
       <div class="spc_box">
         <span class="btn_frame">無効</span>ボタンが有効になる項目でボタンを押すと、デフォルト色になります。<br>
+        スタイルの影響を受ける一般的な部分の色を無効にしておくと、スタイル変更時の修正が楽です。初期状態では、これらの多くが無効になっています。
       </div>
       <div class="spc_box">
         「<b>リストの背景色(交互)</b>」は、通常のファイルリスト(背景画像なしの場合)、<a href="hid00067.htm">コマンドファイル一覧</a>、<a
@@ -167,8 +176,8 @@
     <dd>
       <span class="btn_frame">&nbsp;適用&nbsp;</span>ボタンを押すと、現在のフォント・配色設定(スタイルを除く)が直ちに画面に反映されます。<br>
     </dd>
-    </dl>
-    <br><br>
+  </dl>
+  <br><br>
 
 </body>
 
