--- a/help/src/hid00001.htm
+++ b/help/src/hid00001.htm
@@ -15,7 +15,7 @@
     <font size="4">2画面ファイラー</font>
     <font size="6">NyanFi</font><br>
     <font size="4">
-      for Windows<br><br><br>Version 16.01 (x64 VCLスタイル版)<br>
+      for Windows<br><br><br>Version 16.02 (x64 VCLスタイル版)<br>
     </font>
   </div>
 
@@ -58,7 +58,7 @@
 
   <hr>
   <p class="small">
-    前期高齢者に突入し、体にも不具合が出てきていて、そろそろ引退したい。
+    前期高齢者に突入し、体にも不具合が出てきていて、そろそろ引退したいです。
   </p>
 
 </body>
