--- a/help/src/hid00023.htm
+++ b/help/src/hid00023.htm
@@ -6,19 +6,19 @@
   <title>オプション設定 - フォント・配色</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="OpenStandard">
-	<param name="Keyword" value="Swatchbook.INI">
-	<param name="Keyword" value="インポート">
-	<param name="Keyword" value="エクスポート">
-	<param name="Keyword" value="スタイル">
-	<param name="Keyword" value="スポイト">
-	<param name="Keyword" value="ダークモード">
-	<param name="Keyword" value="タイムスタンプの配色">
-	<param name="Keyword" value="フォント">
-	<param name="Keyword" value="フォント・配色">
-	<param name="Keyword" value="拡張子別配色">
-	<param name="Keyword" value="色見本">
-	<param name="Keyword" value="配色">
+    <param name="Keyword" value="OpenStandard">
+    <param name="Keyword" value="Swatchbook.INI">
+    <param name="Keyword" value="インポート">
+    <param name="Keyword" value="エクスポート">
+    <param name="Keyword" value="スタイル">
+    <param name="Keyword" value="スポイト">
+    <param name="Keyword" value="ダークモード">
+    <param name="Keyword" value="タイムスタンプの配色">
+    <param name="Keyword" value="フォント">
+    <param name="Keyword" value="フォント・配色">
+    <param name="Keyword" value="拡張子別配色">
+    <param name="Keyword" value="色見本">
+    <param name="Keyword" value="配色">
   </object>
 </head>
 
@@ -164,6 +164,13 @@
       タグ別配色は、タグ関係のダイアログで、一覧の右クリックメニューから直接設定することも可能です。<br>
       <br>
     </dd>
+
+    <dt class="no_bg_indent1"> <img src="chkbox.png" alt=""> 非アクティブなメイン画面の一部をグレー化</dt>
+    <dd>
+      メイン画面が非アクティブになったときに、タブ、ディレクトリ情報、およびディレクトリ関係の部分をグレースケール化(明暗も加減)します。非アクティブ時のタイトルバーの変化が分かりにくいスタイルで役立つかもしれません。<br>
+      なお、<a href="hid00091.htm#InactiveAdjust">INIファイルの隠しオプション</a> [Option] <b>InactiveAdjust</b> で、グレースケール化にともなう明暗の加減値(0～255)を設定できます。
+    </dd>
+    <br>
 
     <dt class="no_bg_indent1">配色の</dt>
     <dd>
