--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,6 +42,13 @@
   </div>
 
   <dl>
+    <dt>V16.02 <span class="ver_date">(2023-11-25)</span></dt>
+    <dd>
+      ・オプション設定 - フォント・配色 に「非アクティブなメイン画面の一部をグレー化」を追加。メイン画面が非アクティブになったときに、タブ、ディレクトリ情報、およびディレクトリ関係の部分をグレースケール化(明暗も加減)します。非アクティブ時のタイトルバーの変化が分かりにくいスタイルで役立つかもしれません。<br>
+      ・.nyanfi ファイルによる「ディレクトリ情報の文字色」の設定が適用されなくなっていたのを修正。<br>
+      ・オプション設定 - デザイン でスクロールバーを「標準」にしている場合、XMLビュアー、JSONビュアー、アプリケーション一覧、CSV/TSVレコードのスクロールバーにスタイルが適用されなかったのを修正。<br>
+    </dd>
+
     <dt>V16.01 <span class="ver_date">(2023-11-24)</span></dt>
     <dd>
       ・選択できるスタイルを20種類に増やしました。<br>
