--- a/help/src/hid00091.htm
+++ b/help/src/hid00091.htm
@@ -44,6 +44,11 @@
 SortSymList=★☆●○■□◆◇※
 </pre>
     </dd>
+
+    <dt class="no_bg_indent1" id="InactiveAdjust">[Option] InactiveAdjust　<span class="def_text">(デフォルト: 32)</span></dt>
+    <dd>
+      <a href="hid00023.htm">オプション設定 - フォント・配色</a> の「<b>非アクティブなメイン画面の一部をグレー化</b>」をチェックしている場合、グレースケール化にともなう明暗の加減値(0～255)を設定できます。元の色が暗い場合はより明るく、明るい場合はより暗くします。<br>
+    </dd>
   </dl>
 
 </body>
