--- a/help/src/hid00010.htm
+++ b/help/src/hid00010.htm
@@ -359,7 +359,7 @@
           </dd>
         </dl>
 
-        バッテリー状態やメモリ使用量の表示用として以下の書式文字列も使えます。<br>
+        バッテリー状態や <b>NyanFi</b> のメモリ使用量の表示用として以下の書式文字列も使えます。<br>
         <dl>
           <dt class="no_bg_indent1">$BP</dt>
           <dd>バッテリー残量% 0～100% 不明の場合は <b>----</b></dd>
