--- a/help/src/hid00051.htm
+++ b/help/src/hid00051.htm
@@ -6,22 +6,24 @@
   <title>名前の変更ダイアログ</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="CompressDir">
-    <param name="Keyword" value="Exif情報">
-    <param name="Keyword" value="FLAC">
-    <param name="Keyword" value="ID3タグ">
-    <param name="Keyword" value="MP3">
-    <param name="Keyword" value="NTFS圧縮">
-    <param name="Keyword" value="RenameDlg">
-    <param name="Keyword" value="UndoRename">
-    <param name="Keyword" value="アンドゥ">
-    <param name="Keyword" value="コマンドファイル">
-    <param name="Keyword" value="ファイル名主部の文字置換">
-    <param name="Keyword" value="リストファイル">
-    <param name="Keyword" value="関連ファイルの同時改名">
-    <param name="Keyword" value="置換">
-    <param name="Keyword" value="名前の変更ダイアログ">
-    <param name="Keyword" value="連番">
+	<param name="Keyword" value="CompressDir">
+	<param name="Keyword" value="Exif情報">
+	<param name="Keyword" value="FLAC">
+	<param name="Keyword" value="ID3タグ">
+	<param name="Keyword" value="MP3">
+	<param name="Keyword" value="NTFS圧縮">
+	<param name="Keyword" value="RenameDlg">
+	<param name="Keyword" value="UndoRename">
+	<param name="Keyword" value="アンドゥ">
+	<param name="Keyword" value="コマンドファイル">
+	<param name="Keyword" value="ファイル名主部の文字置換">
+	<param name="Keyword" value="リストファイル">
+	<param name="Keyword" value="関連ファイルの同時改名">
+	<param name="Keyword" value="正規表現">
+	<param name="Keyword" value="正規表現チェッカー">
+	<param name="Keyword" value="置換">
+	<param name="Keyword" value="名前の変更ダイアログ">
+	<param name="Keyword" value="連番">
   </object>
 </head>
 
@@ -160,8 +162,7 @@
     ファイル名に対し、<b>検索</b> <img src="combobox.png" alt=""> に入力した文字列にマッチする部分を <b>置換</b> <img src="combobox.png" alt="">
     で指定した文字列で置換します。<br>
     <img src="chkbox.png" alt=""> <b>正規表現</b>
-    をチェックしていると正規表現が使えます。<b>検索</b>欄の右クリックメニューから正規表現を参照できます。入力内容が正しくない場合、背景色が変わり(<a href="hid00023.htm">オプション設定 -
-      フォント・配色</a> 「不正な入力項目の背景色」)、置換を開始できません。<br>
+    をチェックしていると正規表現が使えます。<b>検索</b>欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。入力内容が正しくない場合、検索欄を囲むエラー色の枠が表示されて置換を開始できません。<br>
     <img src="chkbox.png" alt=""> <b>拡張子は置換しない</b> をチェックしていると、ドットを含む拡張子部分は置換の対象になりません。<br>
     なお置換文字列には、書式文字列の <b>\C</b> (ファイルのパス無しディレクトリ名)を使用できます。
   </p>
