--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -6,16 +6,17 @@
   <title>文字列検索(GREP)</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="FileEdit">
-    <param name="Keyword" value="GREP">
-    <param name="Keyword" value="ReturnList">
-    <param name="Keyword" value="TextViewer">
-    <param name="Keyword" value="xd2txlib.dll">
-    <param name="Keyword" value="タグジャンプ">
-    <param name="Keyword" value="環境変数">
-    <param name="Keyword" value="正規表現">
-    <param name="Keyword" value="文字列検索">
-    <param name="Keyword" value="文字列置換">
+	<param name="Keyword" value="FileEdit">
+	<param name="Keyword" value="GREP">
+	<param name="Keyword" value="ReturnList">
+	<param name="Keyword" value="TextViewer">
+	<param name="Keyword" value="xd2txlib.dll">
+	<param name="Keyword" value="タグジャンプ">
+	<param name="Keyword" value="環境変数">
+	<param name="Keyword" value="正規表現">
+	<param name="Keyword" value="正規表現チェッカー">
+	<param name="Keyword" value="文字列検索">
+	<param name="Keyword" value="文字列置換">
   </object>
 </head>
 
@@ -155,9 +156,9 @@
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 正規表現</dt>
     <dd>検索に正規表現を用います。<br>
-      入力内容が正しくない場合、背景色が変わり(<a href="hid00023.htm">オプション設定 - フォント・配色</a> 「不正な入力項目の背景色」)、<span
+      入力内容が正しくない場合、入力欄を囲むエラー色の枠が表示されて<span
         class="btn_frame">開始</span>ボタンを押せません。<br>
-      なお検索文字列欄の右クリックメニューから、正規表現を参照できます。<br>
+      なお検索文字列欄の右クリックメニューから、正規表現を参照したり、<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
     </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> AND</dt>
