--- a/help/src/hid00061.htm
+++ b/help/src/hid00061.htm
@@ -41,8 +41,8 @@
     </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 正規表現</dt>
-    <dd>置換に正規表現を用います。なお、検索文字列欄の右クリックメニューから、正規表現を参照できます。<br>
-      入力内容が正しくない場合、背景色が変わり(<a href="hid00023.htm">オプション設定 - フォント・配色</a> 「不正な入力項目の背景色」)、<span
+    <dd>置換に正規表現を用います。なお、検索文字列欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
+      入力内容が正しくない場合、検索欄を囲むエラー色の枠が表示されて<span
         class="btn_frame">開始</span>ボタンを押せません。<br>
     </dd>
 
