--- a/help/src/hid00077.htm
+++ b/help/src/hid00077.htm
@@ -27,8 +27,7 @@
 
   <p>
     <b>マスク/パターン</b> には、ワイルドカードを用いたマスクか、正規表現のマッチパターンを設定できます。<b>/</b> ～ <b>/</b>
-    で囲むと正規表現パターンとみなされます。その場合、入力内容が正しくないと背景色が変わり(<a href="hid00023.htm">オプション設定 - フォント・配色</a>
-    「不正な入力項目の背景色」)、登録できません。なお、右クリックメニューで正規表現を参照できます。<br>
+    で囲むと正規表現パターンとみなされます。入力内容が正しくないと、入力欄を囲むエラー色の枠が表示されて登録できません。なお、右クリックメニューで正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
   </p>
 
   <dl>
