--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -42,6 +42,13 @@
   </div>
 
   <dl>
+    <dt>V16.03 <span class="ver_date">(2023-11-29)</span></dt>
+    <dd>
+      ・正規表現チェッカーのパターン欄の下に、入力内容の構文構造を表すカラーバーを追加しました。<br>
+      ・正規表現チェッカーの結果リストに「詳細」オプションを追加。チェックすると、通常の結果に加えて、個々のマッチ/置換/グループ情報も表示されます。<br>
+      ・拡張WAVファイルのファイル情報に「チャネルマスク」を追加。
+    </dd>
+
     <dt>V16.02 <span class="ver_date">(2023-11-25)</span></dt>
     <dd>
       ・オプション設定 - フォント・配色 に「非アクティブなメイン画面の一部をグレー化」を追加。メイン画面が非アクティブになったときに、タブ、ディレクトリ情報、およびディレクトリ関係の部分をグレースケール化(明暗も加減)します。非アクティブ時のタイトルバーの変化が分かりにくいスタイルで役立つかもしれません。<br>
