--- a/help/src/hid00052.htm
+++ b/help/src/hid00052.htm
@@ -6,26 +6,27 @@
   <title>ファイル(/ディレクトリ)名検索ダイアログ</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="CurrToOpp">
-    <param name="Keyword" value="Exif情報">
-    <param name="Keyword" value="FindFileDirDlg">
-    <param name="Keyword" value="FindFileDlg">
-    <param name="Keyword" value="FLAC">
-    <param name="Keyword" value="GPS情報">
-    <param name="Keyword" value="ID3タグ">
-    <param name="Keyword" value="MP3">
-    <param name="Keyword" value="NTFS">
-    <param name="Keyword" value="WAV">
-    <param name="Keyword" value="xd2txlib.dll">
-    <param name="Keyword" value="コードページ">
-    <param name="Keyword" value="タグ">
-    <param name="Keyword" value="ファイル/ディレクトリ名検索ダイアログ">
-    <param name="Keyword" value="ファイル名検索ダイアログ">
-    <param name="Keyword" value="ライブラリファイル">
-    <param name="Keyword" value="改行コード">
-    <param name="Keyword" value="拡張検索">
-    <param name="Keyword" value="正規表現">
-    <param name="Keyword" value="代替データストリーム">
+	<param name="Keyword" value="CurrToOpp">
+	<param name="Keyword" value="Exif情報">
+	<param name="Keyword" value="FindFileDirDlg">
+	<param name="Keyword" value="FindFileDlg">
+	<param name="Keyword" value="FLAC">
+	<param name="Keyword" value="GPS情報">
+	<param name="Keyword" value="ID3タグ">
+	<param name="Keyword" value="MP3">
+	<param name="Keyword" value="NTFS">
+	<param name="Keyword" value="WAV">
+	<param name="Keyword" value="xd2txlib.dll">
+	<param name="Keyword" value="コードページ">
+	<param name="Keyword" value="タグ">
+	<param name="Keyword" value="ファイル/ディレクトリ名検索ダイアログ">
+	<param name="Keyword" value="ファイル名検索ダイアログ">
+	<param name="Keyword" value="ライブラリファイル">
+	<param name="Keyword" value="改行コード">
+	<param name="Keyword" value="拡張検索">
+	<param name="Keyword" value="正規表現">
+	<param name="Keyword" value="正規表現チェッカー">
+	<param name="Keyword" value="代替データストリーム">
   </object>
 </head>
 
@@ -61,8 +62,8 @@
     <dd>検索語の大文字・小文字を区別します。</dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 正規表現</dt>
-    <dd>検索語に正規表現を用います。検索語欄の右クリックメニューから、正規表現を参照できます。<br>
-      入力内容が正しくない場合、背景色が変わり(<a href="hid00023.htm">オプション設定 - フォント・配色</a> 「不正な入力項目の背景色」)、検索を開始できません。<br>
+    <dd>検索語に正規表現を用います。検索語欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
+      入力内容が正しくない場合、入力欄を囲むエラー色の枠が表示されて検索を開始できません。<br>
       <br>
     </dd>
 
