--- a/help/src/hid00085.htm
+++ b/help/src/hid00085.htm
@@ -6,8 +6,9 @@
   <title>正規表現チェッカー</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="RegExChecker">
-    <param name="Keyword" value="正規表現チェッカー">
+	<param name="Keyword" value="RegExChecker">
+	<param name="Keyword" value="正規表現">
+	<param name="Keyword" value="正規表現チェッカー">
   </object>
 </head>
 
@@ -18,13 +19,18 @@
     <a href="hid00005.htm#RegExChecker">RegExChecker</a> コマンドを実行すると、<b>正規表現チェッカー</b>が表示されます。<br>
     また、<a href="hid00052.htm">ファイル名検索</a>、<a href="hid00051.htm#Replace">名前の変更 - 置換</a>、<a
       href="hid00056.htm">文字列検索(GREP)/文字列置換</a>、テキストビュアー/一覧ダイアログでの<a href="hid00065.htm">文字列検索</a>、<a
-      href="hid00066.htm">ユーザ定義文字列一覧</a>、および<a href="hid00077.htm">振り分け</a>において、正規表現を使える入力欄の右クリックメニューからも利用できます。
+      href="hid00066.htm">ユーザ定義文字列一覧</a>、および<a href="hid00077.htm">振り分け</a>において、正規表現を使える入力欄の右クリックメニューからも利用できます。<br>
+      なお、<b>NyanFi</b> で利用できる正規表現は Perl-Compatible です。
   </p>
 
   <p>
     画面の右側には、正規表現のメタ文字やエスケープシーケンスなどの簡単な説明が一覧表示されています。<br>
     また一覧の下部には、いくつかのサンプルパターンもあります。<br>
-    項目をクリックすると、その内容が、<b>パターン</b>のキャレット位置に挿入されます。<br>
+    項目をクリックすると、その内容が、<b>パターン</b>欄のキャレット位置に挿入されます。<br>
+  </p>
+
+  <p class="info_text">
+    <b>パターン</b>欄の下には、入力内容の構文構造を表すカラーバーがあります。色は、テキストビュアーの配色を基に調整しています。
   </p>
 
   <p>
@@ -44,6 +50,10 @@
   </p>
 
   <p>
+    結果リストの <img src="chkbox.png" alt=""> <b>詳細</b> をチェックすると、通常の結果に加えて、個々のマッチ/置換/グループ情報も表示されます。
+  </p>
+
+  <p>
     <span class="btn_frame">コピー</span>ボタンを押すと、パターンがクリップボードにコピーされます。<br>
 
     <span class="btn_frame">コピー(C文字列)</span>ボタンを押すと、パターン内の <b>\</b> を <b>\\</b>、<b>&quot;</b> を
@@ -55,7 +65,7 @@
 
   <p>
     検索対象と結果リストの高さ配分や、右側一覧の幅は、マウスで変更できます。<br>
-    検索対象と結果リストは等幅フォントで表示されます(テキストビュアーのものを利用、サイズはダイアログフォントと同じ)。
+    検索対象と結果リストは等幅フォントで表示されます(テキストビュアーのものを利用、サイズはダイアログのフォントと同じ)。
   </p>
 
   <dl>
